--- a/tracking_page.html
+++ b/tracking_page.html
@@ -35,7 +35,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="game_mode.html">Game Mode<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="tracking_page.html">Game Tracker<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="new_game.html">New Game</a>
