--- a/clue_page.html
+++ b/clue_page.html
@@ -6,7 +6,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
+
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -31,7 +31,7 @@
   </script>
   <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="game_mode.html">QR Scavenger Clue Hunt</a>
+    <a class="navbar-brand" href="index.html">QR Scavenger Clue Hunt</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -40,21 +40,21 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="game_mode.html">Game Mode<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="clue_page.html">Clue<span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Game Mode<span class="sr-only">(current)</span></a>
+      </li>
         <li class="nav-item">
           <a class="nav-link" href="new_game.html">New Game</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="login.html">Login</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="clue_page.html">Clue</a>
-        </li>
 
     </div>
   </nav>
-  
+
   <div class="jumbotron">
     <h1 class="display-4">Clue Page!</h1>
     <p class="lead">Here we'll have some Clue information.</p>
@@ -100,7 +100,7 @@
   <div class="container">
     <div id="clue_text" class="col-sm-6">
 
-      
+
     </div>
 </body>
 
