--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="game_mode.html">QR Scavenger Clue Hunt</a>
+        <a class="navbar-brand" href="index.html">QR Scavenger Clue Hunt</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="game_mode.html">Game Mode<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Game Mode<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="new_game.html">New Game</a>
