--- a/tracking_page.html
+++ b/tracking_page.html
@@ -26,7 +26,7 @@
 <body>
   <!--/______________________________________________________Navigation bar __________________________________________________________________ / -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="game_mode.html">QR Scavenger Clue Hunt</a>
+    <a class="navbar-brand" href="index.html">QR Scavenger Clue Hunt</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -36,6 +36,9 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="tracking_page.html">Game Tracker<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Game Mode</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="new_game.html">New Game</a>
