print div's with some class printing

--- a/assets/javascript/print_page.html
+++ b/assets/javascript/print_page.html
@@ -65,6 +65,14 @@
     </nav>
 
 <div class="printing_goes_here">
+    <div class="item_one">
 
+    </div>
+    <div class="item_two">
+
+    </div>
+<div class="item_three">
+
+</div>
 </div>
     </body>
