--- a/print_page.html
+++ b/print_page.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <style type="text/css" media="all"> @import "nucss2.css";</style>
-    <link rel="stylesheet" type="text/css" media="print" href="print.css">
+    <link rel="stylesheet" type="text/css" media="print" href="assets/css/print.css">
 </head>
 
 <body>
