Created dashboard.js and linked dashboard.html to it and dependencies.

--- a/dashboard.html
+++ b/dashboard.html
@@ -115,6 +115,22 @@
 
 
     </div>
+
+    <!-- Scripts -->
+    <!-- Firebase Components -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
+    ​
+    <!-- Add SDKs for Firebase products that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-auth.js"></script>
+
+    <!-- Our scripts -->
+    <script src="assets/javascript/authTrack.js"></script>
+    <script src="assets/javascript/dbControll.js"></script>
+    <script src="assets/javascript/dahsboard.js"></script>
+
+
 </body>
 
 </html>
