--- a/testBench.html
+++ b/testBench.html
@@ -22,7 +22,9 @@
 
     <!-- Add SDKs for Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-auth.js"></script>
 
+    <script src="assets/javascript/authTrack.js"></script>
     <script src="assets/javascript/dbControll.js"></script>
     <script src="assets/javascript/app.js"></script>
     <!--Start Page Test-->
@@ -58,7 +60,6 @@
                                 </tr>
                             </thead>
                             <tbody>
-
                             </tbody>
                         </table>
                         <br>
