--- a/dashboard.html
+++ b/dashboard.html
@@ -41,7 +41,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="game_mode.html">Game Mode<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="dashboard.html">Dashboard<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Game Mode</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="new_game.html">New Game</a>
