Started work on dashboard.js Added an id to the tbody on dashboard.html for easier interface.

--- a/dashboard.html
+++ b/dashboard.html
@@ -73,13 +73,14 @@
         <!-- Option 1: Table outside of Card -->
         <div class="row">
             <div class="col">
+                <h4>Saved Clue Hunts</h4>
                 <table>
                     <thead>
                         <tr>
-                            <th>Current Active Clue Games |</th>
+                            <th></th>
                         </tr>
                     </thead>
-                    <tbody class="active_game_table">
+                    <tbody id="game-display-area" class="active_game_table">
                         <tr>
                             <td>1</td>
                             <td>x</td>
