--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         <form>
             <div class="gameCode col-xs-4 form-group">
                 <h3 for="inputGameCode">Game Code</h3>
-                <input type="gameCode" class="gameCodeForm form-control" id="gameCode" placeholder="ABCDE12345">
+                <input id="gameCodeForm" type="text" placeholder="ABCDE12345">
             </div>
-            <button onclick="clueFunction()" type="submit" class="submitButton btn btn-primary" >Submit</button>
+            <button onclick="clueFunction()" value="Save" type="submit" class="submitButton btn btn-primary">Submit</button>
         </form>
 
         <h3>Click Here to Start New Game</h3>
