--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <form>
             <div class="gameCode col-xs-4 form-group">
                 <h3 for="inputGameCode">Game Code</h3>
+                <!-- Game Code Form -->
                 <input id="gameCodeForm" type="text" placeholder="ABCDE12345">
             </div>
             <button onclick="clueFunction()" value="Save" type="submit" class="submitButton btn btn-primary">Submit</button>
