--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <!-- Game Code Form -->
                 <input id="codeForm" type="text" placeholder="ABCDE12345">
             </div>
-            <button onclick="clueFunction(), store()"value="Save" type="button" class="submitButton btn btn-primary">Submit</button>
+            <button onclick="store(), clueFunction()" value="Save" type="button" class="submitButton btn btn-primary">Submit</button>
         </form>
 
         <h3>Click Here to Start New Game</h3>
