--- a/dashboard.html
+++ b/dashboard.html
@@ -84,35 +84,7 @@
                         </tr>
                     </thead>
                     <tbody id="game-display-area" class="active_game_table">
-                        <tr>
-                            <td>1</td>
-                            <td>x</td>
-                            <td>
-                                <input class="editButton btn btn-primary" type="reset" value="Edit Game"></td>
-                            <td>
-                                <input class="printButton btn btn-primary" type="reset" value="Print Codes">
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>2</td>
-                            <td>y</td>
-                            <td>
-                                <input class="editButton btn btn-primary" type="reset" value="Print Codes">
-                            </td>
-                            <td>
-                                <input class="printButton btn btn-primary" type="reset" value="Print Codes">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>z</td>
-                            <td>
-                                <input class="editButton btn btn-primary" type="reset" value="Edit Game"></td>
-                            <td>
-                                <input class="printButton btn btn-primary" type="reset" value="Edit Game">
-                            </td>
-                        </tr>
+                        <!-- Tables rows will be appended here via JavaScript -->
                     </tbody>
                 </table>
 
