Added an edit function on new_game.html that pulls the recently created game from Firebase and generates a table of clues and hints for the game

--- a/new_game.html
+++ b/new_game.html
@@ -33,68 +33,64 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="row">
-            <div class="col">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="login.html"> Login <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Game Mode</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="new_game.html">New Game</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="clue_page.html">Clue</a>
-                        </li>
-                </div>
-            </div>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="login.html"> Login <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Game Mode</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="new_game.html">New Game</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="clue_page.html">Clue</a>
+                </li>
+            </ul>
         </div>
     </nav>
     <!-- End of Navigation Bar -->
-    <div class="container-fluid">
-    </div>
-    <div class="row">
-        <div class="col"></div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12 col-md-8 col-lg-9">
-            <div class="card text-white bg-primary">
-                <img class="card-img-top" src="" alt="">
-                <div class="card-body">
-                    <!--Form Data Below-->
-                    <div id="create-new-game" class="form-group">
-                        <label for="group-name">Name Your Game</label>
-                        <textarea class="form-control" name="group-name" id="group-name" rows="1"></textarea>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-8 col-lg-9">
+                <div class="card text-white bg-primary">
+                    <div class="card-body">
+                        <!--Form Data Below-->
+                        <div id="create-new-game" class="form-group">
+                            <label for="group-name">Name Your Game</label>
+                            <textarea class="form-control" name="group-name" id="group-name" rows="1"></textarea>
+                            <br>
+                            <label for="number-of-clues">How many clues?</label>
+                            <input type="number" min="0" name="number-of-clues" id="number-of-clues" class="form-control" placeholder="Pick a number, any number" aria-describedby="helpId">
+                            <br>
+                            <button type="submit" class="btn btn-warning" id="new-game">Submit</button>
+                        </div>
+                        <!-- Table Data Below-->
+                        <h1 class="Text-align-center" id="clues-and-hints-header"></h1>
+                        <h3 id="game-id"></h3>
+                        <table id="clues-and-hints">
+                            <thead>
+                                <tr>
+                                    <td>#</td>
+                                    <td>Clue</td>
+                                    <td>Hint</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
                         <br>
-                        <label for="number-of-clues">How many clues?</label>
-                        <input type="number" min="0" name="number-of-clues" id="number-of-clues" class="form-control" placeholder="Pick a number, any number" aria-describedby="helpId">
+                        <button type="submit" class="btn btn-danger" id="db-gen-new-game">Submit</button>
+                        <button type="submit" class="btn btn-danger" id="edit-new-game">Edit</button>
                         <br>
-                        <button type="submit" class="btn btn-warning" id="new-game">Submit</button>
+                        <div class="images"></div>
                     </div>
-                    <!-- Table Data Below-->
-                    <h1 class="Text-align-center" id="clues-and-hints-header"></h1>
-                    <h3 id="game-id"></h3>
-                    <table id="clues-and-hints">
-                        <thead>
-                            <tr>
-                                <td>#</td>
-                                <td>Clue</td>
-                                <td>Hint</td>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
-                    <br>
-                    <button type="submit" class="btn btn-danger" id="db-gen-new-game">Submit</button>
-                    <div class="images"></div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </body>
 
