working on new navbar and css.

--- a/clue_page.html
+++ b/clue_page.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-  <div class="jumbotron">
+  <div class="jumbotron clue_page">
     <h1 class="display-4">Clue Page!</h1>
     <p class="lead">Here we'll have some Clue information.</p>
     <hr class="my-4">
