--- a/print_page.html
+++ b/print_page.html
@@ -65,13 +65,7 @@
     </nav>
 
 <div class="printing_goes_here">
-    <div class="item_one">
-
-    </div>
-    <div class="item_two">
-
-    </div>
-<div class="item_three">
+    <a class = "clue_print" href="#"></a>
 
 </div>
 </div>
