changed all nav bars on all pages

--- a/new_game.html
+++ b/new_game.html
@@ -9,6 +9,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <!-- Google Fonts API - Raleway -->
+        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <!-- Style.css -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -28,28 +30,13 @@
     <!--Start Page Test-->
 
     <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">QR Scavenger Clue Hunt</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="login.html"> Login <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Game Mode</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="new_game.html">New Game</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="clue_page.html">Clue</a>
-                </li>
-            </ul>
-        </div>
+    <nav>
+        <div class="topnav">
+            <a class="active" href="index.html">Game Mode</a>
+            <a href="new_game.html">New Game</a>
+            <a href="clue_page.html">Clue</a>
+            <a href="login.html">Login</a>
+          </div>
     </nav>
     <!-- End of Navigation Bar -->
 
