--- a/login.html
+++ b/login.html
@@ -2,45 +2,32 @@
 <html lang="en">
 
 <head>
-    <title>Login</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Login</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <!-- Google Fonts API - Raleway -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+  <!-- Google Fonts API - Raleway -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 
-    <!-- Local Style - CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+  <!-- Local Style - CSS -->
+  <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
 <body>
 
-    <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">QR Scavenger Clue Hunt</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="login.html"> Login <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Game Mode</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="new_game.html">New Game</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="clue_page.html">Clue</a>
-        </li>
+  <!-- Navigation bar -->
+  <nav>
+    <div class="topnav">
+      <a class="active" href="index.html">Game Mode</a>
+      <a href="new_game.html">New Game</a>
+      <a href="clue_page.html">Clue</a>
+      <a href="login.html">Login</a>
     </div>
   </nav>
   <!-- End of Navigation Bar -->
@@ -60,35 +47,34 @@
         <small id="nameHelp" class="form-text" style="color: white"></small>
       </div>
 
-        <!-- Email -->
-        <div class="form-group" type="email">
-          <label for="input_Email">Email address</label>
-          <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp"
-            placeholder="Enter email">
-          <small id="emailHelp" class="form-text" style="color: white">We'll never share your email with anyone
-            else.</small>
-        </div>
-        <!-- Password -->
-        <div class="form-group" type="password">
-          <label for="input_Password">Password</label>
-          <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-          <small id="passwordHelp" class="form-text" style="color: white"></small>
-        </div>
+      <!-- Email -->
+      <div class="form-group" type="email">
+        <label for="input_Email">Email address</label>
+        <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email">
+        <small id="emailHelp" class="form-text" style="color: white">We'll never share your email with anyone
+          else.</small>
+      </div>
+      <!-- Password -->
+      <div class="form-group" type="password">
+        <label for="input_Password">Password</label>
+        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+        <small id="passwordHelp" class="form-text" style="color: white"></small>
+      </div>
 
-        <!-- Possible Remember Me* Nice to have function -->
-        <!-- <div class="form-group form-check">
+      <!-- Possible Remember Me* Nice to have function -->
+      <!-- <div class="form-group form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1">Remember Me</label>
       </div> -->
 
-        <!-- Login Button -->
-        <button type="submit" class="loginBtn btn btn-primary">Login</button>
-        <br>
-        <br>
-        <!-- Create New Account Button -->
-        <button type="submit" class="newAccount btn btn-primary">Create a New Account</button>
-        <br>
-        <br>
+      <!-- Login Button -->
+      <button type="submit" class="loginBtn btn btn-primary">Login</button>
+      <br>
+      <br>
+      <!-- Create New Account Button -->
+      <button type="submit" class="newAccount btn btn-primary">Create a New Account</button>
+      <br>
+      <br>
 
     </form>
   </div>
@@ -99,13 +85,13 @@
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+  </script>
 
   <!-- Firebase Components -->
   <!-- The core Firebase JS SDK is always required and must be listed first -->
