--- a/print_page.html
+++ b/print_page.html
@@ -16,7 +16,9 @@
     <!-- Local Style - CSS -->
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <style type="text/css" media="all"> @import "nucss2.css";</style>
+    <style type="text/css" media="all">
+        @import "nucss2.css";
+    </style>
     <link rel="stylesheet" type="text/css" media="print" href="assets/css/print.css">
 </head>
 
@@ -34,39 +36,18 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="game_mode.html">QR Scavenger Clue Hunt</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="game_mode.html">Game Mode<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="new_game.html">New Game</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="clue_page.html">Clue</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="btn btn-info btn-lg">
-                        <span class="glyphicon glyphicon-log-out"></span> Log out
-                    </a>
-                </li>
-
+    <nav>
+        <div class="topnav">
+            <a class="active" href="index.html">Game Mode</a>
+            <a href="new_game.html">New Game</a>
+            <a href="clue_page.html">Clue</a>
+            <a href="login.html">Login</a>
         </div>
     </nav>
 
-<div class="printing_goes_here">
-    <a class = "clue_print" href="#"></a>
+    <div class="printing_goes_here">
+        <a class="clue_print" href="#"></a>
 
-</div>
-</div>
-    </body>
+    </div>
+    </div>
+</body>
