--- a/clue_page.html
+++ b/clue_page.html
@@ -100,8 +100,31 @@
   <div class="container">
     <div id="clue_text" class="col-sm-6">
 
+    <!-- This is the div id that will contain: clue_page.js logic -->
+    <div id="clueLogic"></div>
 
     </div>
+
+    <!-- Scripts -->
+    <!-- Firebase Components -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
+    ​
+    <!-- Add SDKs for Firebase products that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-auth.js"></script>
+
+    <!-- Our scripts -->
+    <script src="assets/javascript/authTrack.js"></script>
+    <script src="assets/javascript/dbControll.js"></script>
+    <script src="assets/javascript/index.js"></script>
+    <script src="assets/javascript/clue_page.js"></script>
+
+<!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
